# Chess

./: README.md
app/: README.md  pyproject.toml
app/app/: app.py  chess_logic.py
app/app/static/: chess_script.js  custom.css
app/app/templates/: base.html  create_form.html  home.html
