[tool.poetry]
name = "chess"
version = "0.1.3"
description = ""
authors = ["KruTimurch <chickowarus@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-socketio = "^5.3.7"
#flask-migrate = "^4.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
